erDiagram
  divipola_departments ||--o{ divipola_municipalities : ""
  vehicle_makes ||--o{ vehicle_lines : ""
  files ||--o{ escritura_attachments : ""
  files ||--o{ verification_evidences : ""
  files ||--o{ procedure_documents : ""
  files ||--o{ document_template_versions : "body"
  verification_sessions ||--o{ verification_evidences : ""
  tenants ||--o{ files : ""
  tenants ||--o{ external_query_calls : ""
  external_query_calls ||--o{ procedure_query_results : "raw → snapshot"
  traffic_agencies ||--o{ webhook_events : "QX"

  document_types {
    uuid id PK
    text code UK "CC|NIT|..."
    text default_person_kind
  }
  files {
    uuid id PK
    uuid tenant_id FK
    text bucket
    text object_key
    text status
  }
  verification_evidences {
    uuid id PK
    uuid verification_session_id FK
    uuid file_id FK
    text evidence_type "pii:high"
  }
  external_query_calls {
    uuid id PK
    uuid tenant_id FK
    text query_connector_code
    boolean succeeded
  }
  webhook_events {
    uuid id PK
    uuid tenant_id FK
    uuid traffic_agency_id FK
    text direction
    text idempotency_key UK
  }